feat(Agent & Backend): pffff !!! I did too much without committing :)
AGENT
- introducing SendableRequestType and adjusting LogRequest and MetricRequest accordingly
- flag DefaultMetricsCollector as component
- Change signature of metricCollector
- Get request and response attributes in SpringMonitoringAspect
- adding relevant dependencies in the pom

BACKEND
- deprecate old log ingestion endpoint
- introduce generic ingestion endpoint and use case for both log and metrics ingestion
- adding domain objects and persistence layer for metrics